# bbbazel

./: .bazelignore  .gitignore  BUILD.bazel  README.md  WORKSPACE  jest.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.node.json  tsconfig.react.json
bazel/rules/react/: defs.bzl
bazel/rules/typescript/react/: defs.bzl
examples/react/: BUILD.bazel  README.md  jest.config.js  package.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
examples/react/src/app/: App.tsx
examples/remix/: BUILD.bazel  package.json  remix.config.js
examples/remix/app/routes/: about.tsx
